@@ -34,7 +34,8 @@ Revision history for Perl extension Net::SSLeay.
     Fixed a problem with set_proxy where the password was not properly
     set. The code to do this went missing at some stage. Reported by Ulrich
     Weber via RT.
-    Further improvements to testing time functions
+    Further improvements to testing time functions. 
+    Added t/local/37_asn1_time.t
 
 1.42	 2011-10-03
     Fixed incorrect documentation of how to enable CRL checking. Patched
